troca do comando console.log para alert

--- a/Aula01/index.html
+++ b/Aula01/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <script>
-        console.log("Primeiro código em Javascript");//vai na tela de console e escreve!
+        alert("Primeiro código em Javascript");
 
     </script>
     
