--- a/Aula01/index.html
+++ b/Aula01/index.html
@@ -8,10 +8,7 @@
 </head>
 <body>
 
-    <script>
-        alert("Primeiro código em Javascript");
-
-    </script>
+<script src="js/primeiro.js"></script>
     
 </body>
 </html>
