adição de comentários ao código do arquivo index3.html

--- a/Aula02/index3.html
+++ b/Aula02/index3.html
@@ -16,6 +16,11 @@
     </form>
 
     <script>
+        /*
+        Neste  script iremos calcular um valor de desconto de 10% sobr o preço do produto. O usuário digita o valor do produto e em 
+        JavaScript obtemos o valor digitado no campo (input) e multiplicamos o valor por 0.9 que dá 10% e assim temos
+        o valor final com desconto de 10%
+        */
         var valorproduto = document.getElementsByTagName("input")[0]
         var calcular = document.getElementsByTagName("input")[1]
         var resultado = document.getElementsByTagName("p")[0]
